feat: migrate auth to thrift and add article crud
